--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 		<div id="header">
 			<div class="container">
 				<div class="row">
-					<div class="col-5 col-lg-4">
+					<div class="col-6 col-lg-4">
 						<div class="logo-box">
-							<a href="/"><img src="/images/logo.png" alt="MadMob logo" /></a>
+							<a href="/"><span class="logo"></span></a>
 						</div>
 					</div>
-					<div class="col-7 col-lg-8">
+					<div class="col-6 col-lg-8">
 						<nav class="top-nav">
 							<ul>
 								<li><a href="#">FAQ</a></li>
