Updated link path. Added .gitignore.

--- a/privacy.html
+++ b/privacy.html
@@ -20,7 +20,7 @@
 						<nav class="top-nav">
 							<ul>
 								<li><a href="#">FAQ</a></li>
-								<li class="selected"><a href="#">Privacy</a></li>
+								<li class="selected"><a href="/privacy.html">Privacy</a></li>
 								<li><a href="#">Terms</a></li>
 							</ul>
 						</nav>
@@ -54,7 +54,7 @@
 			<div id="footer" class="container">
 				<div class="row">
 					<div class="col-lg-12">
-						<p><span>&copy; 2013 Alphonso Inc.</span> <a href="#">FAQ</a><a href="#">Privacy</a><a href="#">Terms of Service</a></p>					
+						<p><span>&copy; 2013 Alphonso Inc.</span> <a href="#">FAQ</a><a href="/privacy.html">Privacy</a><a href="#">Terms of Service</a></p>					
 					</div>
 				</div>
 			</div>
